manifest/objects/sbaa__Approval__c.object
<CustomObject>
    <customHelpPage>sbaa__ApprovalHelp</customHelpPage>
    <description>Approval by individual for specific record.</description>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Quote.</description>
        <inlineHelpText>Lookup to Quote.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Actions__c</fullName>
        <formula>HYPERLINK( &quot;/apex/sbaa__Approve?id=&quot; &amp; Id, $Label.sbaa__lbl_approve, &quot;_self&quot;) + &quot; | &quot; + HYPERLINK( &quot;/apex/sbaa__Reject?id=&quot; &amp; Id, $Label.sbaa__lbl_reject, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalChain__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Approval Chain to which this Approval belongs</description>
        <inlineHelpText>Approval Chain to which this Approval belongs</inlineHelpText>
        <label>Approval Chain</label>
        <referenceTo>sbaa__ApprovalChain__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStep__c</fullName>
        <description>Step (level) at which this approval is required.</description>
        <inlineHelpText>Step (level) at which this approval is required.</inlineHelpText>
        <label>Approval Step</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalTemplateId__c</fullName>
        <description>ID of the Email Template associated with Approval</description>
        <inlineHelpText>ID of the Email Template associated with Approval</inlineHelpText>
        <label>Approval Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who approved this Approval</description>
        <inlineHelpText>User who approved this Approval</inlineHelpText>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApprovedApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApproverField__c</fullName>
        <description>Used with Dynamic Approvers, to capture the field name containing the Approver value</description>
        <inlineHelpText>Used with Dynamic Approvers, to capture the field name containing the Approver value</inlineHelpText>
        <label>Approver Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__Approver__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Approver associated with this Approval.</description>
        <inlineHelpText>Lookup to the Approver associated with this Approval.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Archived Approvals is enabled, indicates that this Approval is archived</description>
        <inlineHelpText>When Archived Approvals is enabled, indicates that this Approval is archived</inlineHelpText>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__AssignedGroupId__c</fullName>
        <description>ID of the Group the Approval is assigned to, if applicable</description>
        <inlineHelpText>ID of the Group the Approval is assigned to, if applicable</inlineHelpText>
        <label>Assigned Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__AssignedToMe__c</fullName>
        <description>True if the current User is also the Assigned To User</description>
        <formula>sbaa__AssignedTo__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if the current User is also the Assigned To User</inlineHelpText>
        <label>Assigned To Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User to which the Approval is assigned</description>
        <inlineHelpText>Lookup to the User to which the Approval is assigned</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__CommentsLong__c</fullName>
        <description>Approver&apos;s Comments</description>
        <inlineHelpText>Approver&apos;s Comments</inlineHelpText>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sbaa__DelegatedApprover__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>If Delegated Approvals is enabled, lookup to the delegated Approver</description>
        <inlineHelpText>If Delegated Approvals is enabled, lookup to the delegated Approver</inlineHelpText>
        <label>Delegated Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Delegated Approvals</relationshipLabel>
        <relationshipName>DelegatedApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity being approved</description>
        <inlineHelpText>Opportunity being approved</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RecallTemplateId__c</fullName>
        <description>ID of the Email Template associated with Recalls</description>
        <inlineHelpText>ID of the Email Template associated with Recalls</inlineHelpText>
        <label>Recall Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RecordField__c</fullName>
        <description>API Name of the Approval field looking up to the record being approved</description>
        <inlineHelpText>API Name of the Approval field looking up to the record being approved</inlineHelpText>
        <label>Record Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RejectedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who rejected this Approval</description>
        <inlineHelpText>User who rejected this Approval</inlineHelpText>
        <label>Rejected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RejectedApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RejectionTemplateId__c</fullName>
        <description>ID of the Email Template associated with Rejection</description>
        <inlineHelpText>ID of the Email Template associated with Rejection</inlineHelpText>
        <label>Rejection Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RequestTemplateId__c</fullName>
        <description>ID of the Email Template associated with Approval Requests</description>
        <inlineHelpText>ID of the Email Template associated with Approval Requests</inlineHelpText>
        <label>Request Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__RequireExplicitApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default, approving any Approval will auto-approve all other Approvals assigned to the same User. If this box is checked, an Approval originated by this Rule will not be auto-approved and must be explicitly approved.</description>
        <inlineHelpText>By default, approving any Approval will auto-approve all other Approvals assigned to the same User. If this box is checked, an Approval originated by this Rule will not be auto-approved and must be explicitly approved.</inlineHelpText>
        <label>Require Explicit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval rule that generated this approval.</description>
        <inlineHelpText>Approval rule that generated this approval.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>sbaa__ApprovalRule__c</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Status__c</fullName>
        <description>Status of this approval.</description>
        <inlineHelpText>Status of this approval.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                    <label>Assigned</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__Unanimous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Approver is a Group, checked if all members need to Approve in order to consider the Approval approved</description>
        <inlineHelpText>If Approver is a Group, checked if all members need to Approve in order to consider the Approval approved</inlineHelpText>
        <label>Unanimous</label>
        <type>Checkbox</type>
    </fields>
    <label>Approval</label>
    <listViews>
        <fullName>Contract_Ops_Approval</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Ops</label>
        <queue>Contract_Ops</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Approval #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>